changed swagger response model for craete notice handler
